Build with -fno-common to catch definition problems

Fix some global variables not declared as extern

https://bugs.freedesktop.org/show_bug.cgi?id=66015